# FFMpegSDLVideoPlayer

./: CMakeLists.txt  FFMpegSDLVideoPlayer.kdev4  README.md  main.cpp
